--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -1,9 +1,10 @@
-name: Java CI
+nname: Java CI
 
 on:
   push:
     branches:
       - master
+      - dev
   pull_request:
     branches:
       - master
@@ -13,28 +14,17 @@ jobs:
     if: startsWith(github.event.head_commit.message, '[CI skip]') == false
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v3
-
+      - uses: actions/checkout@v4
       - name: Set up JDK 17
-        uses: actions/setup-java@v3
+        uses: actions/setup-java@v4
         with:
+          distribution: 'temurin'
           java-version: 17
-          distribution: temurin
-
-      - name: Cache Maven packages
-        uses: actions/cache@v3
-        with:
-          path: ~/.m2
-          key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
-          restore-keys: ${{ runner.os }}-m2
-
+          cache: 'maven'
       - name: Build with Maven
         run: mvn package --file pom.xml
-
       - name: Get build artifact ready
         run: mkdir staging && cp target/*.jar staging
-
       - name: Upload a Build Artifact
         uses: actions/upload-artifact@v4.3.4
         with:
