--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -35,6 +35,7 @@ quarry-options:
     redstone: .5
     quartz: .5
     emerald: .5
+    netherite: .5
 
   # 每隔多少粘液刻输出产物
     #  # 在没有更改 Slimefun 设置的情况下，1 粘液刻 = 0.5 秒
